--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
   </head>
 
   <body>
-    <h1>Hello World</h1>
+    <header>
+      <nav>
+        <div class="nav-wrapper">
+          <a class="brand-logo center" id="gameTitle">Deal or No Deal</a>
+          <ul>
+            <li><a href="intro.html">Introduction</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
     <div class="container">
       <div class="row">
         <div class="col s12 m4 l3 teal">
@@ -57,7 +67,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col s12 m4 l3 teal"></div>
+        <div class="col s12 m4 l12 teal"></div>
       </div>
     </div>
     <!--Javascript Links-->
