--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
         <div class="nav-wrapper">
           <a class="brand-logo center" id="gameTitle">Deal or No Deal</a>
           <ul>
-            <li><a href="intro.html">Introduction</a></li>
+            <li><a href="intro.html" id="introA">Introduction</a></li>
           </ul>
         </div>
       </nav>
     </header>
 
     <div class="container">
-      <div class="row">
-        <div class="col s12 m4 l3 teal">
-          Money Amounts
+      <div class="row center">
+        <div class="col s12 m4 l2 teal" id="bankerInfo">
+          Banker
         </div>
-        <div class="col s12 m8 l9 deep-orange">
+        <div class="col s12 m8 l7 deep-orange" id="gameCasesEl">
           <div class="row">
             <div class="card"></div>
             <div class="card"></div>
@@ -64,13 +64,22 @@
             <div class="card"></div>
             <div class="card"></div>
           </div>
+        </div>
+        <div class="col s12 m4 l3 teal" id="moneyAmountTable">
+          <table id="money-table">
+            <tbody></tbody>
+          </table>
         </div>
       </div>
       <div class="row">
-        <div class="col s12 m4 l12 teal"></div>
+        <div class="col s12 m4 l6 center teal" id="instructionsDisplayed">
+          Display Instructions for round
+        </div>
       </div>
     </div>
     <!--Javascript Links-->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
