--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
           </div>
         </div>
         <div class="col s12 m4 l3 teal" id="moneyAmountTable">
-          <table id="money-table">
-            <tbody></tbody>
-          </table>
+          <div id="money-table">
+          </div>
         </div>
       </div>
       <div class="row">
