Added number labels to the cases

--- a/index.html
+++ b/index.html
@@ -31,38 +31,38 @@
         </div>
         <div class="col s12 m8 l7 deep-orange" id="gameCasesEl">
           <div class="row">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card" id="case-21">21</div>
+            <div class="card" id="case-22">22</div>
+            <div class="card" id="case-23">23</div>
+            <div class="card" id="case-24">24</div>
+            <div class="card" id="case-25">25</div>
+            <div class="card" id="case-26">26</div>
           </div>
           <div class="row">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card" id="case-14">14</div>
+            <div class="card" id="case-15">15</div>
+            <div class="card" id="case-16">16</div>
+            <div class="card" id="case-17">17</div>
+            <div class="card" id="case-18">18</div>
+            <div class="card" id="case-19">19</div>
+            <div class="card" id="case-20">20</div>
           </div>
           <div class="row">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card" id="case-7">7</div>
+            <div class="card" id="case-8">8</div>
+            <div class="card" id="case-9">9</div>
+            <div class="card" id="case-10">10</div>
+            <div class="card" id="case-11">11</div>
+            <div class="card" id="case-12">12</div>
+            <div class="card" id="case-13">13</div>
           </div>
           <div class="row">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card" id="case-1">1</div>
+            <div class="card" id="case-2">2</div>
+            <div class="card" id="case-3">3</div>
+            <div class="card" id="case-4">4</div>
+            <div class="card" id="case-5">5</div>
+            <div class="card" id="case-6">6</div>
           </div>
         </div>
         <div class="col s12 m4 l3 teal" id="moneyAmountTable">
