--- a/intro.html
+++ b/intro.html
@@ -23,6 +23,9 @@
           <ul>
             <li><a href="intro.html" id="introA">Introduction</a></li>
           </ul>
+          <button class="signout-btn-game right" onclick="onSignOut();">
+            Sign Out
+          </button>
         </div>
       </nav>
     </header>
