Added a div for the player's case and classes for the not-clicked cases

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
       <div class="row center">
         <div class="col s12 m4 l2 teal" id="bankerInfo">
           Banker
+          <div class="row">
+            <div id="your-case" class="card case unchosen-case"></div>
+          </div>
         </div>
         <div class="col s12 m8 l7 deep-orange" id="gameCasesEl">
           <div class="row">
