added a nowplaying div

--- a/intro.html
+++ b/intro.html
@@ -98,6 +98,7 @@
           <button id="pauseBtn">
             <i class="fas fa-pause-circle" id="icon"></i>
           </button>
+          <div class="nowPlaying"></div>
         </div>
       </div>
     </div>
