--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-firestore.js"></script>
+    <script src="./assets/js/intro.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
