--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
       <div class="row center">
         <div class="col s12 m4 l2 teal" id="bankerInfo">
           Banker
-          <div class="row">
+            <div>Your Case</div>
             <div id="your-case" class="card case unchosen-case"></div>
-          </div>
         </div>
         <div class="col s12 m8 l7 deep-orange" id="gameCasesEl">
           <div class="row">
