Added InfoDisplay div

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         >
           Display Instructions for round
         </div>
+        <div id="infoDisplayed"></div>
       </div>
     </div>
   
