--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
         </div>
         <div id="infoDisplayed"></div>
       </div>
+      <div class="row">
+        <div
+          class="col s12 m4 l5 offset-l3 center"
+          id="stats-table"
+        >
+        <button id="stats-btn">More Stats</button>
+      </div>
+      </div>
     </div>
   
     <!--Javascript Links-->
