Added a table for More Stats

--- a/index.html
+++ b/index.html
@@ -111,12 +111,17 @@
         <div id="infoDisplayed"></div>
       </div>
       <div class="row">
-        <div
-          class="col s12 m4 l5 offset-l3 center"
-          id="stats-table"
-        >
-        <button id="stats-btn">More Stats</button>
-      </div>
+        <div class="col s12 m4 l5 offset-l3 center" id="stats-table">
+          <button id="stats-btn">More Stats</button>
+        </div>
+
+        <div class="col s12 m4 l5 offset-l3 center" id="stats-table-values">
+          <div class="row" id="expected-value">Expected Value:</div>
+          <div class="row" id="standard-deviation">Standard Deviation:</div>
+          <div class="row" id="median">Median Value:</div>
+          <div class="row" id="first-quartile">First Quartile:</div>
+          <div class="row" id="third-quartile">Third Quartile:</div>
+        </div>
       </div>
     </div>
   
