updated the README

--- a/intro.html
+++ b/intro.html
@@ -107,7 +107,7 @@
                 <li>
                   7. After making your decision the case you have chosen will
                   open and display your winnings. Once the game has ended, make
-                  sure to sign out! :)
+                  sure to sign out!
                 </li>
               </ul>
             </section>
