--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <i class="fas fa-stop icon-stop" id="icon"></i>
             </button>
             <button class="resume-btn right" id="resumeBtn">
-              <i class="fas fa-music icon-resume" id="icon"></i>
+              <i class="fas fa-play icon-resume" id="icon"></i>
             </button>
             <button class="pause-btn right" id="pauseBtn">
               <i class="fas fa-pause-circle icon-pause" id="icon"></i>
@@ -55,60 +55,69 @@
 
     <div class="container">
       <div class="row center">
-        <div class="col s12 m4 l2 teal" id="bankerInfo">
-          Banker
-        </div>
-        <div class="col s12 m8 l7 deep-orange" id="gameCasesEl">
-          <div class="row">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-          </div>
-          <div class="row">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-          </div>
-          <div class="row">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-          </div>
-          <div class="row">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+        <div class="col s12 m4 l2 teal">
+          <div class="row bankerInfo" id="bankerInfo">Banker<br /></div>
+          <div class="row yourCase">
+            <div>Your Case</div>
+            <div id="your-case" class="card case unchosen-case"></div>
           </div>
         </div>
-        <div class="col s12 m4 l3 teal" id="moneyAmountTable">
-          <table id="money-table">
-            <tbody></tbody>
-          </table>
+        <div class="col s12 m8 l6 deep-orange" id="gameCasesEl">
+          <div class="row cards">
+            <div class="card case not-clicked" id="case-21">21</div>
+            <div class="card case not-clicked" id="case-22">22</div>
+            <div class="card case not-clicked" id="case-23">23</div>
+            <div class="card case not-clicked" id="case-24">24</div>
+            <div class="card case not-clicked" id="case-25">25</div>
+            <div class="card case not-clicked" id="case-26">26</div>
+          </div>
+          <div class="row">
+            <div class="card case not-clicked" id="case-14">14</div>
+            <div class="card case not-clicked" id="case-15">15</div>
+            <div class="card case not-clicked" id="case-16">16</div>
+            <div class="card case not-clicked" id="case-17">17</div>
+            <div class="card case not-clicked" id="case-18">18</div>
+            <div class="card case not-clicked" id="case-19">19</div>
+            <div class="card case not-clicked" id="case-20">20</div>
+          </div>
+          <div class="row">
+            <div class="card case not-clicked" id="case-7">7</div>
+            <div class="card case not-clicked" id="case-8">8</div>
+            <div class="card case not-clicked" id="case-9">9</div>
+            <div class="card case not-clicked" id="case-10">10</div>
+            <div class="card case not-clicked" id="case-11">11</div>
+            <div class="card case not-clicked" id="case-12">12</div>
+            <div class="card case not-clicked" id="case-13">13</div>
+          </div>
+          <div class="row">
+            <div class="card case not-clicked" id="case-1">1</div>
+            <div class="card case not-clicked" id="case-2">2</div>
+            <div class="card case not-clicked" id="case-3">3</div>
+            <div class="card case not-clicked" id="case-4">4</div>
+            <div class="card case not-clicked" id="case-5">5</div>
+            <div class="card case not-clicked" id="case-6">6</div>
+          </div>
+          <div class="row">
+            <div class="col s12 m4 l12 center teal" id="instructionsDisplayed">
+              Display Instructions for round
+            </div>
+            <br />
+            <button
+              style="display: none;"
+              value="save"
+              id="saveWinnings"
+              onclick="writeData();"
+            >
+              Save Winnings
+            </button>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div
-          class="col s12 m4 l5 offset-l3 center teal"
-          id="instructionsDisplayed"
-        >
-          Display Instructions for round
+        <div class="col s12 m4 l4 center teal" id="moneyAmountTable">
+          <div id="money-table"></div>
         </div>
       </div>
     </div>
+
     <!--Javascript Links-->
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -117,6 +126,8 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-database.js"></script>
+    <script src="./assets/js/store.js"></script>
     <script src="./assets/js/intro.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
