--- a/index.html
+++ b/index.html
@@ -55,11 +55,24 @@
 
     <div class="container">
       <div class="row center">
-        <div class="col s12 m4 l2 teal">
-          <div class="row bankerInfo" id="bankerInfo">Banker<br /></div>
+        <div class="col s12 m4 l2">
+          <div class="row bankerInfo" id="bankerInfo">Banker's Offer<br /></div>
+          <div class="row stats">Percent of Expected</div>
           <div class="row yourCase">
             <div>Your Case</div>
             <div id="your-case" class="card case unchosen-case"></div>
+          </div>
+          <div class="row">
+            <div class="col s12 m4 l12 center" id="stats-table">
+              <button id="stats-btn">More Stats</button>
+            </div>
+            <div class="col s12 m4 l12 center" id="stats-table-values">
+              <div class="row" id="expected-value">Expected Value:</div>
+              <div class="row" id="standard-deviation">Standard Deviation:</div>
+              <div class="row" id="median">Median Value:</div>
+              <div class="row" id="first-quartile">First Quartile:</div>
+              <div class="row" id="third-quartile">Third Quartile:</div>
+            </div>
           </div>
         </div>
         <div class="col s12 m8 l6 deep-orange" id="gameCasesEl">
@@ -98,7 +111,7 @@
             <div class="card case not-clicked" id="case-6">6</div>
           </div>
           <div class="row">
-            <div class="col s12 m4 l12 center teal" id="instructionsDisplayed">
+            <div class="col s12 m4 l12 center" id="instructionsDisplayed">
               Display Instructions for round
             </div>
             <br />
@@ -112,7 +125,7 @@
             </button>
           </div>
         </div>
-        <div class="col s12 m4 l4 center teal" id="moneyAmountTable">
+        <div class="col s12 m4 l4 center" id="moneyAmountTable">
           <div id="money-table"></div>
         </div>
       </div>
