--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       </nav>
     </header>
 
+    <a href="" id="reset">Reset</a>
     <div class="container">
       <div class="row center">
         <div class="col s12 m4 l2 teal" id="bankerInfo">
