edited the game instructions

--- a/intro.html
+++ b/intro.html
@@ -68,7 +68,7 @@
               1. If you would like to store your highscore please log in using
               your Google credentials. If not you may continue as a guest. To
               listen to music you can search an artist and a playlist will begin
-              playing. The pause, resume, and stop buttons are avaliable if
+              playing. The pause, resume, and stop buttons are available if
               needed.
             </li>
             <li>
@@ -85,12 +85,13 @@
             </li>
             <li>
               3. The banker will then call you with an offer to buy your case,
-              our game will display the expected value of the offer inlcuding
-              other statistics such as mean,standard deviation, etc.
+              our game will display the expected value of the offer (color
+              coded) including other statistics such as mean,standard deviation,
+              etc.
             </li>
             <li>
               4. You can then choose to accept the banker's offer by clicking on
-              the Deal button, or you can reject it by clicking on the No Deal
+              the Deal button, or you can reject it by clicking the No Deal
               button.
             </li>
             <li>
@@ -104,8 +105,9 @@
             </li>
             <li>
               7. After making your decision the case you have chosen will open
-              and display your winnings. Once the game has ended, make sure to
-              sign out!
+              and display your winnings. Once the game has ended, you will have
+              the option to input your name & click the button save winnings to
+              save your highscore! Please make sure to Sign Out.
             </li>
           </ul>
         </div>
