--- a/intro.html
+++ b/intro.html
@@ -72,7 +72,7 @@
               needed.
             </li>
             <li>
-              2. Once you have logged in or continued as guest you will be
+              2. Once you have logged in or continued as a guest you will be
               redirected to the game.
             </li>
             <p>Game Rules</p>
